force-app/main/default/objects/Job_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Used to store the date the application was submitted.</description>
    <inlineHelpText>Please enter the date you submitted the application.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>