force-app/main/default/objects/Job_Application__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>An area to hold detailed information about the job, such as responsibilities, qualifications, benefits, etc.</description>
    <inlineHelpText>Please enter detailed information about the job, such as responsibilities, qualifications, benefits, etc.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>