force-app/main/default/objects/Job_Application__c/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <description>Date to indicate when it&apos;s time to follow up on the submitted application.</description>
    <inlineHelpText>Please enter a date you intend to follow up.</inlineHelpText>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>