force-app/main/default/objects/Job_Application__c/fields/Job_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Posted_Date__c</fullName>
    <label>Job Posted Date</label>
    <type>DateTime</type>
</CustomField>