force-app/main/default/objects/Job_Application__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Link to job posting</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>