force-app/main/default/objects/Job_Application__c/fields/Medicare_Withholding__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Withholding__c</fullName>
    <description>Used to store the amount of medicare withholding.</description>
    <label>Medicare Withholding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>