force-app/main/default/objects/Job_Application__c/fields/New_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Interview_Date__c</fullName>
    <formula>Interview_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Interview Date</label>
    <type>Date</type>
</CustomField>