force-app/main/default/objects/Job_Application__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>Use to include the position or title name.</description>
    <inlineHelpText>Please enter the position or title name.</inlineHelpText>
    <label>Position/Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>