force-app/main/default/objects/Job_Application__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Rating the attractiveness of this job.</description>
    <inlineHelpText>Please choose a rating from the following:&amp;BR()
1 = This is a job I would love.&amp;BR()
2 = I&apos;d like to work here.&amp;BR()
3 = This is acceptable.&amp;BR()
4 = This might be a place I can work for awhile.&amp;BR()
5 = This is my &quot;If I can&apos;t find another job&quot; workplace&amp;BR()</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>