force-app/main/default/objects/Job_Application__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Used to store the salary range.</description>
    <inlineHelpText>Please enter the expected Salary.</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>