force-app/main/default/objects/Job_Application__c/fields/Website_Posting__c.field-meta.xml
<CustomField>
    <fullName>Website_Posting__c</fullName>
    <description>Used to store the web link of the job posting.</description>
    <inlineHelpText>Please enter the URL where you applied to the job.</inlineHelpText>
    <label>Website Posting</label>
    <type>Url</type>
</CustomField>