force-app/main/default/objects/Job_Application__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <description>Used to store the type of location.</description>
    <label>Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>