force-app/main/default/objects/Job_Application__c/listViews/Detailed_list_view.listView-meta.xml
<ListView>
    <fullName>Detailed_list_view</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Follow_up_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Detailed list view</label>
</ListView>